--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "ali-oss": "^6.15.2",
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.1",
+    "mcanvas": "^2.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "spark-md5": "^3.0.1",
     "swiper": "^6.5.6",
     "web-vitals": "^1.0.1"
   },
