--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "ali-oss": "^6.15.2",
+    "antd": "^4.15.4",
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.1",
     "mcanvas": "^2.0.8",
